change the icon from fa-send into fa-envelope.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="mailto:p@cooliktas.com" class="fa-send">Email</a></li>
+								<li><a href="mailto:p@cooliktas.com" class="fa-envelope">Email</a></li>
 								<li><a href="https://github.com/ptrsxu" class="fa-github">Github</a></li>
 								<li><a href="https://twitter.com/ptrsxu" class="fa-twitter">Twitter</a></li>
 								<li><a href="https://www.facebook.com/peter.xu.568" class="fa-facebook">Facebook</a></li>
