--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>PETER XU</h1>
 							<p>Senior Big Data Engineer</p>
-							<p>comming soon...</p>
+							<p>coming soon...</p>
 						</header>
 						<!--
 						<hr />
