--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>PETER XU</h1>
-							<p>Senior Big Data Engineer</p>
+							<p>Algorithm Director</p>
 							<p>coming soon...</p>
 						</header>
 						<!--
